--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-	<head>
-	
-	
-	</head>
-	
-	<body>
-		<h1>hello world !</h1>
-		<p>how u doin ?</p>
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="./css/stylesheet.css">
+	<title>hi</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+	<script src="./js/main.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab|Schoolbell" rel="stylesheet">
+</head>
+
+<body>
+	<div id="gradient">
+		<h1>hello world</h1>
+		<h2>how u doin ?</h2>
+		<a href="https://codepen.io/quasimondo/pen/lDdrF">graident by Mario Klingemann :o</a>
+	</div>
+</body>
 
 </html>
