--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 <body>
 
-	<nav class="navbar navbar-expand-lg navbar-light bg-light shadow card-2" id="gradient">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light card-2" id="gradient">
 		<a class="navbar-brand text-white" href="#">hello</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
 		    aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavDropdown">
-			<ul class="navbar-nav">
+			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
 					<a class="nav-link text-white" href="#">a link
 						<span class="sr-only">(current)</span>
@@ -46,6 +46,11 @@
 					</div>
 				</li>
 			</ul>
+			<span class="navbar-text">
+				<a class="text-white" href="https://codepen.io/quasimondo/pen/lDdrF">
+					graident by Mario Klingemann :o
+				</a>
+			</span>
 		</div>
 	</nav>
 
