--- a/index.html
+++ b/index.html
@@ -2,6 +2,30 @@
 <html lang="en">
 
 <head>
+	<!-- Google 1 -->
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({
+			google_ad_client: "ca-pub-1685632606743591",
+			enable_page_level_ads: true
+		});
+	</script>
+	
+	<!-- Google 2 -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110173281-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-110173281-1');
+	</script>
+
+
 	<title>Hello, world!</title>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
