--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			enable_page_level_ads: true
 		});
 	</script>
-	
+
 	<!-- Google 2 -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110173281-1"></script>
@@ -115,6 +115,13 @@
 			</div>
 		</div>
 	</div>
+
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- footer -->
+	<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-1685632606743591" data-ad-slot="6031655223"></ins>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
