--- a/index.html
+++ b/index.html
@@ -1,137 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-	<!-- Google 1 -->
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<script>
-		(adsbygoogle = window.adsbygoogle || []).push({
-			google_ad_client: "ca-pub-1685632606743591",
-			enable_page_level_ads: true
-		});
-	</script>
-
-	<!-- Google 2 -->
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110173281-1"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-110173281-1');
-	</script>
-
-
-	<title>Hello, world!</title>
-	<!-- Required meta tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
-	    crossorigin="anonymous">
-	<link rel="stylesheet" href="./css/stylesheet.css">
-</head>
-
-<body>
-
-	<nav class="navbar navbar-expand-lg navbar-light bg-light card-2" id="gradient">
-		<a class="navbar-brand text-white" href="#">hello</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-		    aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNavDropdown">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link text-white" href="#">a link
-						<span class="sr-only">(current)</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link text-white" href="#">heres another</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link text-white" href="#">im also a link!</a>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-					    aria-expanded="false">
-						Dropdown link
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<a class="dropdown-item" href="#">Something else here</a>
-					</div>
-				</li>
-			</ul>
-			<span class="navbar-text">
-				<a class="text-white" href="https://codepen.io/quasimondo/pen/lDdrF">
-					graident by Mario Klingemann :o
-				</a>
-			</span>
-		</div>
-	</nav>
-
-	<div class="container-fluid">
-		<div class="row">
-			<div class="container mt-4">
-				<h1>hello there</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet hendrerit nibh, in tincidunt libero. Integer sed
-					dignissim metus. Nullam at felis fringilla, euismod velit vitae, sagittis nisl. Quisque aliquam diam condimentum pulvinar
-					auctor. Morbi blandit posuere purus. Fusce condimentum sed tellus vitae interdum. Aliquam erat volutpat. Nulla porta,
-					nulla in placerat euismod, sapien quam tincidunt leo, scelerisque egestas mauris velit laoreet augue. Pellentesque sagittis
-					quam sit amet risus mattis, eu ullamcorper nisl sodales. Aenean ornare pellentesque aliquet. In risus ante, blandit
-					vitae velit non, vehicula faucibus risus. Maecenas tincidunt consequat gravida. Ut feugiat id neque vulputate consectetur.
-					Suspendisse in urna eu sem malesuada viverra. Sed laoreet rutrum lectus, nec commodo erat pellentesque sit amet. Aenean
-					vulputate diam accumsan, lobortis nulla ut, convallis metus. Morbi dolor sem, pellentesque non est quis, semper finibus
-					nulla. Vivamus fringilla tempus dolor quis euismod. Fusce mollis nisi elementum, eleifend tortor ut, sollicitudin magna.
-					Donec ac blandit nisl. Nunc viverra elementum magna ut scelerisque. Donec pretium nisl eget lacus consequat vestibulum.
-					Mauris sit amet lacus id tellus elementum condimentum id sollicitudin turpis.</p>
-				<p>
-					Nulla ante eros, rhoncus aliquet fringilla nec, euismod at turpis. Fusce feugiat in leo vitae efficitur. Fusce iaculis dapibus
-					ante in commodo. Suspendisse gravida interdum tempus. Nullam laoreet leo vitae mauris laoreet, at euismod eros gravida.
-					Donec leo enim, porttitor sed dapibus et, imperdiet eu elit. Phasellus posuere bibendum fermentum. Nulla at sollicitudin
-					dui. Curabitur mi lectus, suscipit id malesuada ac, pellentesque eget nisl. Sed eget tincidunt augue. Aenean eget malesuada
-					nibh, non elementum lacus. Aliquam id dui ac risus auctor iaculis. Curabitur iaculis egestas leo sed vestibulum. Maecenas
-					fermentum, nisl placerat iaculis pharetra, elit tellus elementum diam, mollis commodo nisi justo ac tellus. In quis
-					tristique elit. Nullam at ante rutrum, malesuada sapien et, pretium eros. Sed eget ipsum sagittis, ullamcorper sapien
-					vitae, volutpat lacus. Maecenas lacinia ornare odio sed viverra. Cras at pellentesque purus. Integer eleifend tristique
-					lacus, eu hendrerit ipsum bibendum at. Donec dictum vulputate scelerisque. In nec rutrum nibh. Duis at nunc id purus
-					porttitor finibus et eu dui. Mauris sed congue eros, nec vulputate ante.</p>
-				<p>Aliquam at accumsan nulla. Donec maximus dictum magna aliquet consequat. Donec tempor commodo augue, vel efficitur lectus
-					molestie eu. Ut sed lectus tincidunt, dignissim tellus viverra, sodales augue. Phasellus posuere neque in dolor aliquam
-					vulputate. Vivamus faucibus dolor id porttitor elementum. Nullam vitae sapien interdum, tristique mauris vel, vulputate
-					quam. Sed faucibus arcu nisl, eu laoreet enim vulputate sed. Etiam lorem ante, efficitur nec fringilla eu, tempus sed
-					tellus. Aenean rhoncus fringilla quam id dignissim. Suspendisse efficitur leo sapien, in accumsan purus porttitor quis.
-					Maecenas malesuada nibh a tempus euismod. Pellentesque feugiat egestas neque, sed efficitur nunc consectetur vitae.
-					Nulla id odio sodales, condimentum sem hendrerit, vehicula leo. Aliquam vitae placerat lorem. Aliquam sed ipsum fermentum,
-					gravida urna et, dapibus nisl. Aenean ut dignissim turpis, nec viverra dui.</p>
-			</div>
-		</div>
-	</div>
-
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<!-- footer -->
-	<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-1685632606743591" data-ad-slot="6031655223"></ins>
-	<script>
-		(adsbygoogle = window.adsbygoogle || []).push({});
-	</script>
-
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-	    crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-	    crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-	    crossorigin="anonymous"></script>
-	<script src="./js/main.js"></script>
-</body>
-
-</html>
+hello world
