--- a/index.html
+++ b/index.html
@@ -1,1 +1,136 @@
-hello world
+<html lang="en">
+
+<head>
+    <title>RELEASE 20HERTZ NOW</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+
+    <!-- x -->
+    <link rel="icon" href="http://cdn.toptenreviews.com/rev/prod/small/50157-hertz-box.jpg" type="image/x-icon">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="main.css" />
+</head>
+
+<body class="bg_yellow">
+    <header class="bg_orange pt-5 pb-5 card-2">
+        <!-- Big -->
+        <h1 class="huge-h1 d-none d-lg-block">👏Release 20Hertz Now!👏</h1>
+        <!-- Medium -->
+        <h1 class="d-none d-sm-block d-lg-none">👏Release 20Hertz Now!👏</h1>
+        <!-- Small -->
+        <h4 class="d-sm-none">👏Release 20Hertz Now!👏</h4>
+
+        <h3>(Coming 06-06-2018, ?)</h3>
+
+        <!-- <a href="https://soundcloud.com/the_real_o">His Souncloud?</a> -->
+
+    </header>
+
+    <div class="container">
+        <article>
+
+            <div class="article-header-container">
+                <h2 class="article-header">IM BACK 👋👋👋🙏🙏</h2>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <img src="img/hack.png" class="img-fluid article-img" alt="Responsive image">
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="mb-5 d-md-none"></div>
+
+                    <p>Im finally back!
+                        <i>Mister Leaker</i> aka
+                        <i>"@hax"</i> here, I have been gone for quite some time, but I am finally back and ready to leak some
+                        more stuff! I do have to say...
+                        <b>Not everything i posted prior has been true</b>, and i posted some things
+                        <b>ONLY TO GET ATTENTION</b>. Like for example, The O is
+                        <b>NOT</b> a druggie and he does
+                        <b>NOT</b> hate music. I know I have said this... but, I am a new man now, and that is a thing of the
+                        past. 🙏🙏🙏
+                    </p>
+                </div>
+            </div>
+        </article>
+
+        <article>
+            <div class="article-header-container">
+                <h2 class="article-header">The O spotted doing charity work! 😍😍</h2>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <img src="img/charity.jpg" class="img-fluid article-img" alt="Responsive image">
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="mb-5 d-md-none"></div>
+                    <p>The famous celebrity The O was supposedly doing charity work! This photo depicts The O doing an amazing
+                        act! Wow! 😍😍😍 More people should be like The O!! Some witnesses also said that The O gave out
+                        tons of cash to homeless people! Like it was nothing!! 💸💸💸 Just imagine that The O would risk
+                        his life for someone else 💛</p>
+                </div>
+            </div>
+        </article>
+
+
+        <article>
+            <div class="article-header-container">
+                <h2 class="article-header">THE O'S FAKE MANAGER!! 😱</h2>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <img src="img/manager.jpg" class="img-fluid article-img" alt="Responsive image">
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="mb-5 d-md-none"></div>
+                    <p>Because of the amount of fame The O has been recieving recently, many are claiming to be his manager,
+                        but like The O, the identity of The O's manager is unknown... This is believed to be so that he wont
+                        get robbed... But please be cautious!! THEY WILL TRY TO SCAM YOU! There are reports by that point
+                        out that for example John Gren is trying to impersenate The O's manager, but
+                        <b>DO NOT</b> listen to him!!</p>
+                </div>
+            </div>
+        </article>
+
+        <article>
+            <div class="article-header-container">
+                <h2 class="article-header">The O's SOUNDCLOUD?? ☁</h2>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/435291603&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                    <!-- <img src="img/cat2.jpg" alt="leaked song names" class="article-img" /> -->
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="mb-5 d-md-none"></div>
+                    <p>Is The O getting ready to release his album? I installed a keylogger on what i believe is The O's computer,
+                        and I think I may have potentially found The O's soundcloud profile... I think 20 Hertz may be released
+                        here 🤔🤔🤔. I guess we just have to wait and find out! 😁</p>
+                </div>
+            </div>
+        </article>
+
+        <div class="mt-5"></div>
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
